--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Token
+*token*.py
+
+# Generated pages
+/html/saved-tweets
+
+# Database files
+*.db
+
+
+
+
+
+
+# *** Python gitignore ***
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
